# micro_sp_emulation

./: CMakeLists.txt  Cargo.toml  README.md  build.rs  package.xml
docker/: docker-compose.yaml
micro_sp_emulation/: Cargo.toml
micro_sp_emulation/src/: lib.rs  main.rs
micro_sp_emulation/src/interfaces/: gantry_client_ticker.rs  robot_client_ticker.rs
micro_sp_emulation/src/models/minimal/: model.rs  state.rs
micro_sp_emulation/src/utils/: mod.rs  state_publisher.rs
proptest-regressions/runner/: rita_model.txt
proptest-regressions/tests/: gripper_test.txt
src/: lib.rs  main.rs  test.rs
src/archived/: gantry_pub_sub_emu.rs  gripper_pub_sub_ticker.rs  rita_model.rs  robot_action_ticker.rs  scanner_model.rs
src/emulators/: dummy_pub_sub.rs  gantry.rs  gantry_emulator.rs  gantry_pub_sub_emu.rs  gripper_emulator.rs  gripper_pub_sub_emu.rs  gripper_service_emulator.rs  mod.rs  random_gripper_emulator.rs  random_scanner_emulator.rs  robot.rs  robot_action_emu.rs  robot_emulator.rs  scanner_emulator.rs  scanner_service_adversary.rs  scanner_service_emu.rs  scanner_service_emulator.rs  stateful_dummy_pub_sub.rs  stateless_dummy_pub_sub.rs  ur_emulator.rs
src/model/: auto_operations.rs  auto_operations_multi.rs  auto_ops.rs  auto_trans.rs  auto_transitions.rs  automatic.rs  counter_goal.rs  disabled.rs  emergency.rs  failed_bypass.rs  failed_fatal.rs  failed_retries.rs  goal_runner.rs  incoming_goals.rs  minimal.rs  mod.rs  multiple_goals.rs  nominal.rs  replan.rs  retries.rs  scheduled_goals.rs  sop_alternative.rs  sop_par_nom_auto.rs  sop_parallel.rs  sop_seq_nom_auto.rs  sop_sequence.rs  state.rs  timeout.rs  timeout_bypass.rs  timeout_disabled.rs  timeout_fatal.rs  timeout_retries.rs
src/models/: mod.rs  model.rs  scan_grip_rob_model.rs
src/runner/: dummy_action_ticker.rs  dummy_pub_sub_model.rs  gantry_client_ticker.rs  gantry_pub_sub_ticker.rs  gripper_client_ticker.rs  gripper_pub_sub_ticker.rs  mod.rs  rita_model.rs  robot_action_ticker.rs  robot_client_ticker.rs  scan_grip_rob_model.rs  scanner_client_ticker.rs  scanner_model.rs  set_state_server.rs  the_model.rs  ticker.rs  ur_robot.rs
src/tests/: gripper_test.rs  mod.rs  test_1.rs
src/utils/: env_logger.rs
