[package]
name = "micro_sp_emulation"
version = "0.1.0"
authors = ["endre90 <endre90@gmail.com>"]
edition = "2021"

[dependencies]
r2r = "0.6.3"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
serde = "1.0.130"
ordered-float = "3.4.0"
micro_sp = {git = "https://github.com/endre90/micro_sp", branch = "master"}
serde_json = "1.0.91"

[build-dependencies]
quote = "1.0.23"
syn = "1.0.107"

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name = "gantry_pub_sub_emu"
path = "src/emulators/gantry_pub_sub_emu.rs"

[[bin]]
name = "gripper_pub_sub_emu"
path = "src/emulators/gripper_pub_sub_emu.rs"

[[bin]]
name = "robot_action_emu"
path = "src/emulators/robot_action_emu.rs"

# [[bin]]
# name = "set_state"
# path = "src/set_state.rs"