[package]
name = "micro_sp_emulation"
version = "0.1.0"
authors = ["endre90 <endre90@gmail.com>"]
edition = "2021"

[dependencies]
# r2r = "0.6.3"
r2r = { path = "../../../rust_crates/r2r/r2r", version = "0.6.3" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
serde = "1.0.130"
ordered-float = "3.4.0"
micro_sp = {git = "https://github.com/endre90/micro_sp", branch = "master"}
serde_json = "1.0.91"
proptest = "1.1.0"
rand = "0.8.5"

[build-dependencies]
quote = "1.0.23"
syn = "1.0.107"

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name = "random_scanner_emulator"
path = "src/emulators/random_scanner_emulator.rs"

[[bin]]
name = "random_gripper_emulator"
path = "src/emulators/random_gripper_emulator.rs"

[[bin]]
name = "test"
path = "src/test.rs"