[package]
name = "micro_sp_emulation"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2024"
autotests = false

[profile.colcon]
inherits = "release"

[profile.release]
debug = true

[dependencies]
log = "0.4.21"
colored = "2.1"
regex = "1.12.2"
env_logger = "0.11.5"
rand = "0.8.5"
chrono = "0.4.38"
nanoid = "0.4.0"
futures = "0.3.15"
redis = { version = "0.29.1", features = ["tokio-comp"] }
ordered-float = {version = "3.4.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.4"
micro_sp = {git = "https://github.com/endre90/micro_sp", branch = "master"}
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["redis"] }
serial_test = "3.2.0"
serde_json = "1.0.91"